fix: mobile spacing

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -4,6 +4,12 @@
   position: sticky;
 }
 
+@media only screen and (max-width: 825px) {
+    .pf-nav {
+        width: 100% !important;
+    }
+}
+
 .pf-nav {
   margin-top: 15px;
   margin-left: auto;
